--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,6 @@
 # jwt
 security.jwt.token.secret-key=my-tiny-bank
 security.jwt.token.expire-length=3600000
+
+# slack hook
+slack.hook.url=https://hooks.slack.com/services/var1/var2/var3
