--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # jwt
 security.jwt.token.secret-key=my-tiny-bank
 security.jwt.token.expire-length=3600000
+
+# slack hook
+slack.hook.url=https://hooks.slack.com/services/var1/var2/var3
