--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # jwt
 security.jwt.token.secret-key=my-tiny-bank
 security.jwt.token.expire-length=3600000
+
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
